[tool.poetry]
name = "security-services"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.0"
authlib = "^1.3.0"
werkzeug = "^3.0.0"
pyotp = "^2.9.0"
qrcode = "^7.4.0"
pillow = "^10.0.0"
mangum = "^0.17.0"
pyopenssl = "^24.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
