[tool.poetry]
name = "oauth2-otp-server"
version = "1.0.0"
description = "OAuth2 Authorization Server with TOTP Authentication"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/moduguvikram/security-services"
repository = "https://github.com/moduguvikram/security-services"
keywords = ["oauth2", "authentication", "otp", "totp", "flask", "authlib"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.0"
authlib = "^1.3.0"
werkzeug = "^3.0.0"
pyotp = "^2.9.0"
qrcode = "^7.4.0"
pillow = "^10.0.0"
mangum = "^0.17.0"
pyopenssl = "^24.0.0"
gunicorn = "^21.2.0"
flask-swagger-ui = "^4.11.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
